[fix] search bar align & trainer remove close

--- a/public/assets/scss/custom/custom.scss
+++ b/public/assets/scss/custom/custom.scss
@@ -559,6 +559,7 @@ slick-slider .slick-list,
 .custom-trainee-dashboard {
   width: 96vw !important;
   max-width: 100% !important;
+  overflow-x: hidden !important;
 }
 
 // trainee dashboard
@@ -568,7 +569,10 @@ slick-slider .slick-list,
 @media (max-width: 576px) {
   .trainee-dashboard {
     position: absolute !important;
-    left: 0px !important;
+    width: 100% !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+    left: 0% !important;
   }
   .trainer-recommended {
     margin-left: 15px !important;
